--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ services:
 before_script:
 - ip a s
 - docker version
-- docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" REGISTRY="$CI_REGISTRY"
+- docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
 
 
 
