dont use rdtscp

--- a/gromacs/Dockerfile
+++ b/gromacs/Dockerfile
@@ -93,6 +93,7 @@ RUN for ARCH in SSE2 AVX_256 AVX2_256 AVX_512; do \
     -DCMAKE_INSTALL_PREFIX=/gromacs \
     -DREGRESSIONTEST_DOWNLOAD=ON \
     -DGMX_USE_NVML=OFF \
+    -DGMX_USE_RDTSCP=OFF \
 #    -DMPIEXEC_PREFLAGS=--allow-run-as-root \
     -DGMX_SIMD=${ARCH} \
     -DCMAKE_INSTALL_BINDIR=bin.${ARCH} \
