--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ services:
 
 before_script:
 - ip a s
-- apk add --update bash
+- apk add --update bash make sed
 - docker version
 - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
 
@@ -14,7 +14,9 @@ before_script:
 build-all:
   stage: build
   script:
-    - ls -l
-    - bash ./build-all.sh
+    - make
+  artifacts:
+    paths:
+    - gromacs/gmx-docker
   only:
     - master
