--- a/gromacs/Dockerfile
+++ b/gromacs/Dockerfile
@@ -63,6 +63,8 @@ COPY --from=builder /gromacs /gromacs
 
 ENV PATH=$PATH:/gromacs/bin
 
+RUN ldconfig
+
 WORKDIR /tmp
 
 # Enable the entrypoint to use the dockerfile as a GROMACS binary
