--- a/gromacs/gmx-docker.in
+++ b/gromacs/gmx-docker.in
@@ -21,9 +21,11 @@ fi
 
 DOUBLE=""
 
-set -- $(getopt da:rRv:h "$@")
+eval set -- $(getopt -o +da:rRv:n:h -- "$@")
+unset MPI
 
 while [ $1 != '--' ]; do case $1 in
+	-n) MPI="$2"; shift; shift ;;
 	-d) DOUBLE="_d"; shift ;;
 	-a) ARCH="$2"; shift; shift ;;
 	-r) RDTSCP="_ts"; shift ;;
@@ -33,6 +35,7 @@ while [ $1 != '--' ]; do case $1 in
 usage: $0 options [--] gromacs_args ...
 
 options are:
+	-n		MPI processes
 	-d		double precision
 	-a arch		enforce specific CPU architecture (sse2, avx, avx2, avx512)
 	-r		enforce RDTSCP (should be detected)
@@ -51,4 +54,13 @@ if [ -n "$DOUBLE" ]; then
 	echo warning: disabling RDTSCP with double precision >&2
 fi
 
-docker run ${IMAGE}/gromacs_${ARCH}${RDTSCP}${DOUBLE}${VERSION} "$@"
+if [ -z "$WORKDIR_OUTSIDE" ]; then
+	WORKDIR_OUTSIDE=$PWD
+fi
+
+unset MPIRUN
+if [ -n "$MPI" ]; then
+	MPIRUN="mpirun -np $MPI"
+fi
+
+docker run -u $(id -u):$(id -g) -i -v $WORKDIR_OUTSIDE:/tmp ${IMAGE}/gromacs_${ARCH}${RDTSCP}${DOUBLE}${VERSION} $MPIRUN gmx "$@"
