--- a/gromacs/universal/Dockerfile
+++ b/gromacs/universal/Dockerfile
@@ -40,22 +40,14 @@ RUN CC=gcc CXX=g++ cmake ../src \
 
 RUN CC=gcc CXX=g++ cmake ../src \
     -DGMX_OPENMP=ON \
-<<<<<<< HEAD
 	-DGMX_GPU=ON \
     -DGMX_MPI=ON \
 	-DGMX_DOUBLE=OFF \
 	-DGMX_BUILD_OWN_FFTW=ON \
 	-DGMX_BUILD_MDRUN_ONLY=ON \
-=======
-    -DGMX_GPU=OFF \
-    -DGMX_MPI=ON \
-    -DGMX_DOUBLE=ON \
-    -DGMX_BUILD_OWN_FFTW=ON \
-    -DGMX_BUILD_MDRUN_ONLY=ON \
->>>>>>> f64eadd4f231739264370de2b58ef6a712c1aeca
     -DGMX_DEFAULT_SUFFIX=OFF \
-    -DCMAKE_INSTALL_PREFIX=/gromacs/AVX_512 \
-    -DGMX_USE_RDTSCP=OFF \
+    -DCMAKE_INSTALL_PREFIX=/gromacs/AVX_512_ts \
+    -DGMX_USE_RDTSCP=ON \
     -DGMX_SIMD=AVX_512 \
   && make -j ${JOBS} \
   && make install; done
@@ -79,19 +71,11 @@ RUN CC=gcc CXX=g++ cmake ../src \
 
 RUN CC=gcc CXX=g++ cmake ../src \
     -DGMX_OPENMP=ON \
-<<<<<<< HEAD
 	-DGMX_GPU=ON \
     -DGMX_MPI=ON \
 	-DGMX_DOUBLE=OFF \
 	-DGMX_BUILD_OWN_FFTW=ON \
 	-DGMX_BUILD_MDRUN_ONLY=ON \
-=======
-    -DGMX_GPU=OFF \
-    -DGMX_MPI=ON \
-    -DGMX_DOUBLE=ON \
-    -DGMX_BUILD_OWN_FFTW=ON \
-    -DGMX_BUILD_MDRUN_ONLY=ON \
->>>>>>> f64eadd4f231739264370de2b58ef6a712c1aeca
     -DGMX_DEFAULT_SUFFIX=OFF \
     -DCMAKE_INSTALL_PREFIX=/gromacs/AVX2_256 \
     -DGMX_USE_RDTSCP=OFF \
@@ -99,26 +83,17 @@ RUN CC=gcc CXX=g++ cmake ../src \
   && make -j ${JOBS} \
   && make install; done
 
-
 RUN CC=gcc CXX=g++ cmake ../src \
     -DGMX_OPENMP=ON \
-<<<<<<< HEAD
 	-DGMX_GPU=ON \
     -DGMX_MPI=ON \
 	-DGMX_DOUBLE=OFF \
 	-DGMX_BUILD_OWN_FFTW=ON \
 	-DGMX_BUILD_MDRUN_ONLY=ON \
-=======
-    -DGMX_GPU=OFF \
-    -DGMX_MPI=ON \
-    -DGMX_DOUBLE=ON \
-    -DGMX_BUILD_OWN_FFTW=ON \
-    -DGMX_BUILD_MDRUN_ONLY=ON \
->>>>>>> f64eadd4f231739264370de2b58ef6a712c1aeca
     -DGMX_DEFAULT_SUFFIX=OFF \
-    -DCMAKE_INSTALL_PREFIX=/gromacs/SSE2 \
-    -DGMX_USE_RDTSCP=OFF \
-    -DGMX_SIMD=SSE2 \
+    -DCMAKE_INSTALL_PREFIX=/gromacs/AVX2_256_ts \
+    -DGMX_USE_RDTSCP=ON \
+    -DGMX_SIMD=AVX2_256 \
   && make -j ${JOBS} \
   && make install; done
 
@@ -167,7 +142,8 @@ COPY --from=builder /gromacs /gromacs
 COPY universal/mdrun-chooser.sh /opt
 
 ENV PATH=$PATH:/gromacs/bin
-
+ 
 RUN ldconfig
 
 WORKDIR /tmp
+
