--- a/gromacs/gmx-docker.in
+++ b/gromacs/gmx-docker.in
@@ -122,7 +122,7 @@ EOF
 
 else
 # XXX: always grab all gpus
-	if [ $(docker -v | sed 's/Docker version //; s/\..*$//;') -ge 19 ]; then
+	if [ $(docker -v | sed 's/Docker version //; s/\..*$//;') -ge 19 -a -c /dev/nvidiactl ]; then
 		gpu="--gpus all --device /dev/nvidiactl:/dev/nvidiactl --device /dev/nvidia-uvm:/dev/nvidia-uvm"
 		for d in /dev/nvidia[0-9]*; do
 			gpu="$gpu --device $d:$d"
