--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ before_script:
 build-all:
   stage: build
   script:
-    - docker build -t $CI_REGISTRY:$CI_REGISTRY_USER/gromacs:latest
-    - docker push $CI_REGISTRY:$CI_REGISTRY_USER/gromacs:latest
+    - docker build -t $CI_REGISTRY/$CI_REGISTRY_USER/gromacs:latest
+    - docker push $CI_REGISTRY/$CI_REGISTRY_USER/gromacs:latest
   only:
     - master
