--- a/tune/static-cluster.yaml
+++ b/tune/static-cluster.yaml
@@ -135,7 +135,8 @@ spec:
           medium: Memory
       containers:
         - name: ray-head
-          image: rayproject/ray:2.3.0
+#          image: rayproject/ray:2.3.0
+          image: ljocha/gromacs:2023-2-ray
           imagePullPolicy: Always
           command: [ "/bin/bash", "-c", "--" ]
           # if there is no password for Redis, set --redis-password=''
@@ -174,7 +175,7 @@ spec:
               type: RuntimeDefault
           resources:
             limits:
-              cpu: "1"
+              cpu: "500m"
               memory: "2G"
             requests:
               # For production use-cases, we recommend specifying integer CPU reqests and limits.
@@ -215,11 +216,12 @@ spec:
           medium: Memory
       containers:
       - name: ray-worker
-        image: rayproject/ray:2.3.0
+        # image: rayproject/ray:2.3.0
+        image: ljocha/gromacs:2023-2-ray
         imagePullPolicy: Always
         command: ["/bin/bash", "-c", "--"]
         args:
-          - "ray start --num-cpus=$MY_CPU_REQUEST --address=service-ray-cluster:6380 --object-manager-port=8076 --node-manager-port=8077 --dashboard-agent-grpc-port=8078 --dashboard-agent-listen-port=52365 --block"
+          - "ray start --num-cpus=$MY_CPU_REQUEST --num-gpus=$MY_GPU_REQUEST --address=service-ray-cluster:6380 --object-manager-port=8076 --node-manager-port=8077 --dashboard-agent-grpc-port=8078 --dashboard-agent-listen-port=52365 --block"
 
         # This volume allocates shared memory for Ray to use for its plasma
         # object store. If you do not provide this, Ray will fall back to
@@ -235,21 +237,17 @@ spec:
             valueFrom:
               resourceFieldRef:
                 resource: requests.cpu
-          # The resource requests and limits in this config are too small for production!
-          # It is better to use a few large Ray pods than many small ones.
-          # For production, it is ideal to size each Ray pod to take up the
-          # entire Kubernetes node on which it is scheduled.
+          - name: MY_GPU_REQUEST
+            value: "1"
         resources:
           limits:
-            cpu: "1"
-            memory: "1G"
-            # For production use-cases, we recommend specifying integer CPU reqests and limits.
-            # We also recommend setting requests equal to limits for both CPU and memory.
-            # For this example, we use a 500m CPU request to accomodate resource-constrained local
-            # Kubernetes testing environments such as Kind and minikube.
+            cpu: "8"
+            memory: "16G"
+            nvidia.com/mig-1g.10gb: 1
           requests:
-            cpu: "500m"
-            memory: "1G"
+            cpu: "8"
+            memory: "16G"
+            nvidia.com/mig-1g.10gb: 1
         securityContext:
           capabilities:
             drop:
