--- a/tune/static-cluster.yaml
+++ b/tune/static-cluster.yaml
@@ -136,7 +136,7 @@ spec:
       containers:
         - name: ray-head
 #          image: rayproject/ray:2.3.0
-          image: ljocha/gromacs:2023-2-ray
+          image: cerit.io/ljocha/gromacs:2023-2-ray
           imagePullPolicy: Always
           command: [ "/bin/bash", "-c", "--" ]
           # if there is no password for Redis, set --redis-password=''
@@ -217,7 +217,7 @@ spec:
       containers:
       - name: ray-worker
         # image: rayproject/ray:2.3.0
-        image: ljocha/gromacs:2023-2-ray
+        image: cerit.io/ljocha/gromacs:2023-2-ray
         imagePullPolicy: Always
         command: ["/bin/bash", "-c", "--"]
         args:
